# High-Beam

./: .editorconfig  .eslintrc.js  .gitignore  CLEANUP_PROGRESS.md  Cargo.toml  Justfile  LICENSE  README.md  SUMMARY.md  babel.config.js  build.rs  forge.config.ts  index.html  package-lock.json  package.json  rustfmt.toml  vite.renderer.config.ts  vue.config.js
.github/workflows/: ci.yml  plugins.yml  release.yml
bundle/: Info.plist  icon.icns
docs/: architecture.md  distribution.md  internals.md  platform.md  plugin-authoring.md  plugin-cookbook.md  plugin-tutorial.md  sdk-reference.md  theming.md  views.md
legacy/: main.js
legacy/components/: QueryResultRow.vue
legacy/plugins/: AbstractPlugin.js  CalculatorPlugin.js  DnDPlugin.js  HttpCodePlugin.js  SpotlightPlugin.js
legacy/utils/: AppIconFetcher.js  class.js  data.js  fs.js  string.js
packaging/aur/: .SRCINFO  PKGBUILD  README.md
packaging/homebrew/: README.md
packaging/linux/: highbeam.desktop  highbeam.service  install.sh
plugins/: package-lock.json  package.json
plugins/1password/: 1password.test.js  manifest.json  package-lock.json  package.json  plugin.js
plugins/app-launcher/: app-launcher.test.js  manifest.json  package-lock.json  package.json  plugin.js
plugins/bitwarden/: bitwarden.test.js  manifest.json  package-lock.json  package.json  plugin.js
plugins/calculator/: calculator.test.js  manifest.json  package-lock.json  package.json  plugin.js
plugins/clipboard-history/: clipboard-history.test.js  manifest.json  package-lock.json  package.json  plugin.js
plugins/color-converter/: manifest.json  package-lock.json  package.json  plugin.js
plugins/currency-converter/: currency-converter.test.js  manifest.json  package-lock.json  package.json  plugin.js
plugins/dictionary-linux/: dictionary-linux.test.js  manifest.json  package-lock.json  package.json  plugin.js
plugins/dictionary-macos/: dictionary-macos.test.js  manifest.json  package.json  plugin.js
plugins/dnd/: manifest.json  package.json  plugin.js
plugins/echo/: manifest.json  package.json
plugins/echo-ts/: README.md  manifest.json  package-lock.json  package.json  plugin.ts  tsconfig.json
plugins/emoji-picker/: emoji-data.json  emoji-picker.test.js  manifest.json  package-lock.json  package.json  plugin.js  vitest.config.ts
plugins/file-search/: file-search.test.js  manifest.json  package.json  plugin.js
plugins/frecency-demo/: manifest.json  plugin.js
plugins/http-codes/: http-codes.test.js  package-lock.json  package.json  plugin.js
plugins/kill-process/: kill-process.test.js  manifest.json  package.json  plugin.js
plugins/obsidian/: manifest.json  obsidian.test.js  package-lock.json  package.json  plugin.js  vitest.config.ts
plugins/paper-size/: manifest.json  package-lock.json  package.json  plugin.js
plugins/prefpanes/: manifest.json  package.json  plugin.js  prefpanes.test.js
plugins/quick-links/: package-lock.json  package.json  plugin.js
plugins/slow-echo/: manifest.json  plugin.js
plugins/system/: README.md  manifest.json  package.json  plugin.js  system.test.js  vitest.config.ts
plugins/tutorial/: manifest.json  package.json  plugin.js  tutorial.test.js
plugins/unit-conversions/: manifest.json  package.json  plugin.js
plugins/view-demo/: manifest.json  plugin.js
plugins/web-search/: manifest.json  package-lock.json  package.json  plugin.js  web-search.test.js
plugins/window-mgmt/: README.md  manifest.json  package.json  plugin.js  window-mgmt.test.js
plugins/xkcd/: README.md  manifest.json  package.json  plugin.js  xkcd.test.js
public/: index.html
scripts/: create-signing-cert.sh  restore-signing-cert.sh
sdk/highbeam/: README.md  actions.d.ts  actions.js  clipboard.d.ts  clipboard.js  fs.d.ts  fs.js  http.d.ts  http.js  icons.d.ts  icons.js  index.d.ts  match.d.ts  match.js  package.json  platform.d.ts  platform.js  settings.d.ts  settings.js  system.d.ts  system.js  types.d.ts  view.d.ts  view.js  vitest.config.example.ts
src/: ActionBuilder.ts  App.vue  Application.ts  PluginLoader.js  PluginManager.js  PluginManager.ts  QueryWindow.ts  app.rs  background.js  bundle_install.rs  cli.rs  confirm.rs  daemon.rs  dark_mode.rs  global.d.ts  hotkey.rs  index.css  ipc.rs  lib.rs  logging.rs  main.js  main.rs  main.ts  os_appearance.rs  paths.rs  preload.ts  settings.rs  settings_ui.rs  theme.rs  updater.rs  window.rs  window_wayland.rs
src/app/: callbacks.rs  host_view.rs  install_flow.rs  mod.rs  query.rs
src/assets/: variables.scss
src/components/: AutoResize.tsx  QueryResultRow.scss  QueryResultRow.tsx  QueryResultRow.vue  QueryResultTable.vue  QueryWindow.scss  QueryWindow.tsx
src/exceptions/: PluginLoaderException.ts
src/frecency/: db.rs  mod.rs  score.rs
src/plugins/: AbstractKeywordPlugin.js  AbstractPlugin.js  CalculatorPlugin.js  CalculatorPlugin.ts  CorePlugin.js  DnDPlugin.js  HttpCodePlugin.js  HttpCodePlugin.ts  PaperSizePlugin.js  SpotlightPlugin.js  actions.rs  dispatch.rs  http.json  install.rs  loader.rs  log.rs  manifest.rs  mod.rs  paper-sizes.json  registry.rs  result.rs  runtime.rs
src/query_history/: db.rs  mod.rs  state.rs
src/sdk/: abort.rs  actions.rs  capability.rs  clipboard.rs  console.rs  errors.rs  fs.rs  http.rs  icons.rs  match.rs  mod.rs  platform.rs  settings.rs  system.rs  text_codec.rs  timers.rs  view.rs
src/themes/: default.scss
src/ui/: mod.rs
src/utils/: AppIconFetcher.js  AppleAppIcon.ts  class.js  data.js  fs.ts  functions.js  string.js  string.ts
src/views/: mod.rs
src/windows/: QueryWindow.js  QueryWindow.vue  (+2 more)
tests/: plugin_echo.rs  plugin_install.rs  plugin_logging.rs  plugin_reload.rs  plugin_runtime.rs  plugin_smoke.rs  runtime_globals.rs  sdk_fs.rs  sdk_icons.rs  sdk_match.rs  sdk_settings.rs  sdk_shape.rs  sdk_system.rs  sdk_text_codec.rs
themes/: dracula.toml  frosty-glass.toml  macos-tahoe.toml  nord.toml  solarized.toml  tokyo-night.toml  yosemite-spotlight.toml
ui/: confirm_view.slint  launcher_view.slint  query.slint  settings_view.slint  themed_combobox.slint  types.slint  view_frame.slint
(+91 files in other folders)
