[package]
name = "high-beam"
version = "0.1.0"
edition = "2024"
license = "MIT"
build = "build.rs"
description = "Native Rust keyboard launcher (Spotlight / Alfred / Raycast / Ulauncher class)."
authors = ["Bas Bieling"]
homepage = "https://github.com/Mechazawa/high-beam"

# `cargo packager` (the Tauri team's bundler) reads this table to produce
# `target/release/HighBeam.app` + `target/release/HighBeam_<ver>_*.dmg`.
# Install once with `cargo install cargo-packager --locked`, then
# `just bundle` produces both artifacts.
[package.metadata.packager]
product-name = "HighBeam"
identifier = "com.high-beam.HighBeam"
# `binaries` tells the packager which build outputs to bundle; the path is
# relative to `out-dir` and resolved against the cargo target dir at runtime.
binaries = [{ path = "high-beam", main = true }]
icons = ["bundle/icon.png"]
# The plugins land in `Contents/Resources/plugins/<name>/...` at bundle
# time; `src/daemon.rs::install_default_plugins_if_needed` copies them to
# the user's plugin dir on first launch. Dev-only fixtures
# (`echo`, `echo-ts`, `slow-echo`, `frecency-demo`) deliberately stay out
# of the shipped bundle.
# When `src` resolves to a single file, cargo-packager uses `target`
# verbatim as the destination filename inside Contents/Resources — so each
# entry spells out its full target path. Dev-only files (package.json,
# vitest configs, node_modules, *.test.*, lockfiles) stay out of the
# bundle by simply not being listed.
resources = [
    { src = "examples/plugins/calculator/manifest.json",   target = "plugins/calculator/manifest.json" },
    { src = "examples/plugins/calculator/plugin.js",       target = "plugins/calculator/plugin.js" },
    { src = "examples/plugins/http-codes/manifest.json",   target = "plugins/http-codes/manifest.json" },
    { src = "examples/plugins/http-codes/plugin.js",       target = "plugins/http-codes/plugin.js" },
    { src = "examples/plugins/http-codes/http.json",       target = "plugins/http-codes/http.json" },
    { src = "examples/plugins/app-launcher/manifest.json", target = "plugins/app-launcher/manifest.json" },
    { src = "examples/plugins/app-launcher/plugin.js",     target = "plugins/app-launcher/plugin.js" },
    { src = "examples/plugins/paper-size/manifest.json",   target = "plugins/paper-size/manifest.json" },
    { src = "examples/plugins/paper-size/plugin.js",       target = "plugins/paper-size/plugin.js" },
    { src = "examples/plugins/dnd/manifest.json",          target = "plugins/dnd/manifest.json" },
    { src = "examples/plugins/dnd/plugin.js",              target = "plugins/dnd/plugin.js" },
    { src = "examples/plugins/dnd/5eSpells.json",          target = "plugins/dnd/5eSpells.json" },
    { src = "themes/yosemite-spotlight.toml",              target = "themes/yosemite-spotlight.toml" },
]
# `app` is the .app bundle; `dmg` wraps it in a drag-to-Applications disk
# image. Both are macOS-only.
formats = ["app", "dmg"]

[package.metadata.packager.macos]
# Ad-hoc signing — enough to run locally; real distribution to other Macs
# needs a Developer ID Application certificate (see docs/distribution.md).
signing-identity = "-"
# Hides the daemon from the Dock and Cmd-Tab. Pairs with the runtime
# `NSApp.setActivationPolicy(.accessory)` fallback for `cargo run`.
background-app = true
minimum-system-version = "14.0"
info-plist-path = "bundle/Info.plist"

[package.metadata.packager.dmg]
# Default drag-to-Applications layout; cargo-packager auto-adds the
# Applications shortcut symlink when no app-folder-position is set, so we
# only need to position the .app itself.
window-size = { width = 660, height = 400 }
app-position = { x = 180, y = 170 }
application-folder-position = { x = 480, y = 170 }

[dependencies]
# `unstable-winit-030` exposes focus/blur events and the underlying winit
# window so we can set native properties .slint can't express.
slint = { version = "1.16", features = ["unstable-winit-030"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# QuickJS embedding for plugins. Features:
#   * `loader`   — Resolver/Loader traits for the `highbeam:` import scheme
#   * `futures`  — AsyncRuntime + `Promise::into_future` to drive `async
#                  function* query()` without manual job-queue pumping
#   * `macro`    — `#[rquickjs::module]` ergonomics for host modules
#   * `parallel` — required by `futures` for Send-able runtime handles
rquickjs = { version = "0.11", features = ["loader", "futures", "macro", "parallel"] }

# Single-threaded tokio drives the AsyncRuntime per query.
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "process", "io-util"] }

# `CancellationToken` is how we cascade aborts into in-flight I/O.
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }

# `rustls-tls` keeps openssl out of the dep tree; `json` is for the
# convenience `response.json()` path.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

futures = { version = "0.3", default-features = false, features = ["std"] }

arboard = "3"

# `open::that(url)` works on macOS (`/usr/bin/open`) and Linux (`xdg-open`).
open = "5"

# `bundled` ships SQLite with the binary so we don't depend on whatever the
# host OS happens to have. The frecency table sees single-digit-ms reads/
# writes from one thread; a plain `Mutex<Connection>` suffices.
rusqlite = { version = "0.32", features = ["bundled"] }

# `nucleo-matcher` exposes per-match char indices so we can round-trip
# highlight ranges to JS.
nucleo-matcher = "0.3"

base64 = "0.22"

# Default features pull in every format `image` supports — we only ship PNG
# and JPEG icons, so disabling defaults trims the transitive tree.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# `parse` for theme.toml reads; `display` adds write-back for settings.toml.
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }

# `chrono` is already in the transitive tree via slint; clock + std is all
# the plugin.log writer needs.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Host-side structured logging. `tracing` is the event/macro surface; the
# `fmt`+`env-filter` subscriber gives us level-routed stderr output with
# `RUST_LOG`-style filtering. Per-plugin logs still go through `PluginLog`.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }

# macOS-only:
#   * `global-hotkey` — only crate that works on modern macOS for app-level
#     global hotkeys without an Accessibility prompt
#   * `objc2*` — `NSApp.activate(ignoringOtherApps:)` +
#     `NSWindow.makeKeyAndOrderFront` for the focus dance in `window::show`
#   * `raw-window-handle` — pulls the `NSView` ptr out of winit; pinned to
#     winit-0.30's versions to avoid a second objc2 family in the dep tree
[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.8"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "0.2", features = ["NSThread"] }
raw-window-handle = "0.6"

[build-dependencies]
slint-build = "1.16"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
